Defensively copy the parameters map to enforce immutability